--- a/Project 5.ipynb
+++ b/Project 5.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -263,7 +263,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -420,7 +420,7 @@
        "19  20   25.6296"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -480,15 +480,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (4066594009.py, line 14)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;36m  Cell \u001b[1;32mIn[21], line 14\u001b[1;36m\u001b[0m\n\u001b[1;33m    for i in\u001b[0m\n\u001b[1;37m            ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax\n"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Index: 20, Value: 25.629600000000003\n"
      ]
     }
    ],
@@ -512,7 +511,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -789,7 +788,7 @@
        "[720 rows x 13 columns]"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -833,7 +832,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -846,7 +845,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -884,7 +883,6 @@
        "      <th>verschil</th>\n",
        "      <th>verschil_groter_dan_30_minuten</th>\n",
        "      <th>Reistijd</th>\n",
-       "      <th>Route</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -904,7 +902,6 @@
        "      <td>0 days</td>\n",
        "      <td>False</td>\n",
        "      <td>0.066667</td>\n",
-       "      <td>ehvgar-ehvbst</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -920,11 +917,11 @@
        "      starttijd datum      eindtijd datum  omloop nummer verschil  \\\n",
        "0 2024-08-29 05:03:00 2024-08-29 05:07:00              1   0 days   \n",
        "\n",
-       "   verschil_groter_dan_30_minuten  Reistijd          Route  \n",
-       "0                           False  0.066667  ehvgar-ehvbst  "
+       "   verschil_groter_dan_30_minuten  Reistijd  \n",
+       "0                           False  0.066667  "
       ]
      },
-     "execution_count": 16,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -942,7 +939,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -958,7 +955,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -978,7 +975,7 @@
        "Name: Kleur, Length: 720, dtype: object"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1001,7 +998,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -1075,6 +1072,30 @@
     "\n",
     "# Plot het resultaat\n",
     "plot_bus_schedule(df_planning)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "mikkieeee\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "MikPik\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('MikPik')"
    ]
   },
   {
