--- a/Project 5.ipynb
+++ b/Project 5.ipynb
@@ -1100,6 +1100,23 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Robbin je bent zo sterk\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"Robbin je bent zo sterk\")"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
