--- a/Project_5.ipynb
+++ b/Project_5.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,85 +25,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
      "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Unnamed: 0</th>\n",
-       "      <th>startlocatie</th>\n",
-       "      <th>eindlocatie</th>\n",
-       "      <th>starttijd</th>\n",
-       "      <th>eindtijd</th>\n",
-       "      <th>activiteit</th>\n",
-       "      <th>buslijn</th>\n",
-       "      <th>energieverbruik</th>\n",
-       "      <th>starttijd datum</th>\n",
-       "      <th>eindtijd datum</th>\n",
-       "      <th>omloop nummer</th>\n",
-       "      <th>afstand_meters</th>\n",
-       "      <th>afstand_km</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>0</td>\n",
-       "      <td>ehvgar</td>\n",
-       "      <td>ehvbst</td>\n",
-       "      <td>05:03:00</td>\n",
-       "      <td>05:07:00</td>\n",
-       "      <td>materiaal rit</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>4.125</td>\n",
-       "      <td>2024-08-29 05:03:00</td>\n",
-       "      <td>2024-08-29 05:07:00</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1650</td>\n",
-       "      <td>1.65</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
       "text/plain": [
-       "   Unnamed: 0 startlocatie eindlocatie starttijd  eindtijd     activiteit  \\\n",
-       "0           0       ehvgar      ehvbst  05:03:00  05:07:00  materiaal rit   \n",
-       "\n",
-       "   buslijn  energieverbruik     starttijd datum      eindtijd datum  \\\n",
-       "0      NaN            4.125 2024-08-29 05:03:00 2024-08-29 05:07:00   \n",
-       "\n",
-       "   omloop nummer  afstand_meters  afstand_km  \n",
-       "0              1            1650        1.65  "
+       "0       1.9800\n",
+       "1      10.8036\n",
+       "2       0.0100\n",
+       "3      10.8600\n",
+       "4       0.0100\n",
+       "        ...   \n",
+       "715    12.8496\n",
+       "716    10.8000\n",
+       "717     1.9800\n",
+       "718    12.8496\n",
+       "719    10.8000\n",
+       "Name: energieverbruik, Length: 720, dtype: float64"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "source": [
-    "df_planning.head(1)"
-   ]
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -329,211 +276,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 20,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>startlocatie</th>\n",
-       "      <th>eindlocatie</th>\n",
-       "      <th>min reistijd in min</th>\n",
-       "      <th>max reistijd in min</th>\n",
-       "      <th>afstand in meters</th>\n",
-       "      <th>buslijn</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>ehvapt</td>\n",
-       "      <td>ehvbst</td>\n",
-       "      <td>21</td>\n",
-       "      <td>23</td>\n",
-       "      <td>10250</td>\n",
-       "      <td>400.0</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "  startlocatie eindlocatie  min reistijd in min  max reistijd in min  \\\n",
-       "0       ehvapt      ehvbst                   21                   23   \n",
-       "\n",
-       "   afstand in meters  buslijn  \n",
-       "0              10250    400.0  "
-      ]
-     },
-     "execution_count": 20,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df_afstand.head(1)"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "De maximale energieverbruik is 364.5 voordat ze bij de garage moeten zijn. Hier onder is een overzicht van hoeveel energie een bus maximaal heeft verbruikt voordat hij is gaan opladen. "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 21,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Unnamed: 0</th>\n",
-       "      <th>startlocatie</th>\n",
-       "      <th>eindlocatie</th>\n",
-       "      <th>starttijd</th>\n",
-       "      <th>eindtijd</th>\n",
-       "      <th>activiteit</th>\n",
-       "      <th>buslijn</th>\n",
-       "      <th>energieverbruik</th>\n",
-       "      <th>starttijd datum</th>\n",
-       "      <th>eindtijd datum</th>\n",
-       "      <th>omloop nummer</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>0</td>\n",
-       "      <td>ehvgar</td>\n",
-       "      <td>ehvbst</td>\n",
-       "      <td>05:03:00</td>\n",
-       "      <td>2024-10-30 05:07:00</td>\n",
-       "      <td>materiaal rit</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>1.98</td>\n",
-       "      <td>2024-08-29 05:03:00</td>\n",
-       "      <td>2024-08-29 05:07:00</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "   Unnamed: 0 startlocatie eindlocatie starttijd            eindtijd  \\\n",
-       "0           0       ehvgar      ehvbst  05:03:00 2024-10-30 05:07:00   \n",
-       "\n",
-       "      activiteit  buslijn  energieverbruik     starttijd datum  \\\n",
-       "0  materiaal rit      NaN             1.98 2024-08-29 05:03:00   \n",
-       "\n",
-       "       eindtijd datum  omloop nummer  \n",
-       "0 2024-08-29 05:07:00              1  "
-      ]
-     },
-     "execution_count": 21,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df_planning.head(1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 22,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>startlocatie</th>\n",
-       "      <th>vertrektijd</th>\n",
-       "      <th>eindlocatie</th>\n",
-       "      <th>buslijn</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>ehvapt</td>\n",
-       "      <td>06:04</td>\n",
-       "      <td>ehvbst</td>\n",
-       "      <td>401</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "  startlocatie vertrektijd eindlocatie  buslijn\n",
-       "0       ehvapt       06:04      ehvbst      401"
-      ]
-     },
-     "execution_count": 22,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df_tijden.head(1)"
    ]
   },
   {
