--- a/Youp.ipynb
+++ b/Youp.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -69,7 +69,7 @@
        "      <td>ehvgar</td>\n",
        "      <td>ehvbst</td>\n",
        "      <td>05:03:00</td>\n",
-       "      <td>05:07:00</td>\n",
+       "      <td>2024-10-31 05:07:00</td>\n",
        "      <td>materiaal rit</td>\n",
        "      <td>NaN</td>\n",
        "      <td>1.98</td>\n",
@@ -82,22 +82,23 @@
        "</div>"
       ],
       "text/plain": [
-       "   Unnamed: 0 startlocatie eindlocatie starttijd  eindtijd     activiteit  \\\n",
-       "0           0       ehvgar      ehvbst  05:03:00  05:07:00  materiaal rit   \n",
+       "   Unnamed: 0 startlocatie eindlocatie starttijd            eindtijd  \\\n",
+       "0           0       ehvgar      ehvbst  05:03:00 2024-10-31 05:07:00   \n",
        "\n",
-       "   buslijn  energieverbruik     starttijd datum      eindtijd datum  \\\n",
-       "0      NaN             1.98 2024-08-29 05:03:00 2024-08-29 05:07:00   \n",
+       "      activiteit  buslijn  energieverbruik     starttijd datum  \\\n",
+       "0  materiaal rit      NaN             1.98 2024-08-29 05:03:00   \n",
        "\n",
-       "   omloop nummer  \n",
-       "0              1  "
+       "       eindtijd datum  omloop nummer  \n",
+       "0 2024-08-29 05:07:00              1  "
       ]
      },
-     "execution_count": 15,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "df_planning['eindtijd'] = pd.to_datetime(df_planning['eindtijd'],'%H:%M')\n",
     "df_planning.head(1)"
    ]
   },
